--- a/tot/src/main/webapp/static/css/global.css
+++ b/tot/src/main/webapp/static/css/global.css
@@ -5,13 +5,14 @@
     font-style: normal;
 }
 
-body {
-    font-family: 'Pretendard-Regular';
-    margin: 0;
-    padding: 0;
+* {
     text-decoration: none;
     color:#333;
     list-style: none;
+    font-family: 'Pretendard-Regular';
+    margin: 0;
+    padding: 0;
+
 }
 
 hr {
@@ -56,7 +57,6 @@ hr {
 
 input[type="text"] {
     width: 350px;
-    padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
